--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.4.1
   cloud_firestore: ^4.3.1
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
