--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.4.1
   cloud_firestore: ^4.3.1
   google_fonts: ^3.0.1
+  firebase_storage: ^11.0.10
 
 dev_dependencies:
   flutter_test:
