--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^4.3.1
   google_fonts: ^3.0.1
   firebase_storage: ^11.0.10
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
