retriew images from firebase

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^3.0.1
   firebase_storage: ^11.0.10
   cached_network_image: ^3.2.3
+  firebase_auth: ^4.2.5
 
 dev_dependencies:
   flutter_test:
