--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cached_network_image: ^3.2.3
   firebase_auth: ^4.2.5
   flutter_zoom_drawer: ^3.0.3
+  url_launcher: ^6.1.7
 
 dev_dependencies:
   flutter_test:
